--- a/src/i18-next/translations/ru/common.json
+++ b/src/i18-next/translations/ru/common.json
@@ -7,8 +7,10 @@
   "menu": {
     "appeals": "Обращения",
     "applications": "Заявления",
-    "register": "Реестр",
+    "accreditation": "Аккредитация",
+    "register": "Реестры",
     "risk_analysis": "Анализ рисков",
+    "cadastre": "Кадастр",
     "prophylactic": "Профилактический",
     "attestation": "Аттестация",
     "state_reception": "Государственный приём",
