--- a/src/i18-next/translations/uz/common.json
+++ b/src/i18-next/translations/uz/common.json
@@ -7,8 +7,10 @@
   "menu": {
     "appeals": "Murojaatlar",
     "applications": "Arizalar",
-    "register": "Reestr",
+    "accreditation": "Akkreditatsiya",
+    "register": "Reestrlar",
     "risk_analysis": "Xavf tahlili",
+    "cadastre": "Kadastr",
     "prophylactic": "Profilaktika",
     "attestation": "Attestatsiya",
     "state_reception": "Davlat qabuli",
