feat: translate app name

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -16,5 +16,8 @@
     "state_reception": "Давлат қабули",
     "monitoring": "Мониторинг",
     "reports": "Ҳисоботлар"
+  },
+  "app": {
+    "name": "Саноат, радиация ва ядро хавфсизлиги қўмитаси экотизими"
   }
 }
