--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -16,5 +16,8 @@
     "state_reception": "Davlat qabuli",
     "monitoring": "Monitoring",
     "reports": "Hisobotlar"
+  },
+  "app": {
+    "name": "Sanoat, radiatsiya va yadro xavfsizligi qo‘mitasi ekotizimi"
   }
 }
