refactor: fully refactored error boundary component and asset files

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -2,7 +2,12 @@
   "actions": {
     "save": "Сақлаш",
     "cancel": "Бекор қилиш",
-    "delete": "Ўчириш"
+    "delete": "Ўчириш",
+    "reload": "Янгилаш"
+  },
+  "errors": {
+    "something_went_wrong": "Хатолик юз берди!",
+    "view_details": "Маълумотларни кўрсатиш"
   },
   "menu": {
     "appeals": "Мурожаатлар",
