refactor: refactored base-drawer and ...etc

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -7,7 +7,7 @@
   },
   "errors": {
     "something_went_wrong": "Xatolik yuz berdi!",
-    "view_details": "Ma'lumotlar ko'rsatish"
+    "view_details": "Ma'lumotlarni ko'rsatish"
   },
   "menu": {
     "appeals": "Murojaatlar",
