feat: create new regions management and remove sub menu from sidebar

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -7,7 +7,8 @@
   },
   "errors": {
     "something_went_wrong": "Хатолик юз берди!",
-    "view_details": "Маълумотларни кўрсатиш"
+    "view_details": "Маълумотларни кўрсатиш",
+    "page_not_found": "Саҳифа топилмади"
   },
   "menu": {
     "appeals": "Мурожаатлар",
