refactor: change routing and fetch current user

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -3,7 +3,14 @@
     "save": "Сақлаш",
     "cancel": "Бекор қилиш",
     "delete": "Ўчириш",
-    "reload": "Янгилаш"
+    "deleting": "Ўчирилмоқда...",
+    "reload": "Янгилаш",
+    "add": "Қўшиш",
+    "edit": "Таҳрирлаш",
+    "view": "Кўрсатиш",
+    "close": "Ёпиш",
+    "add_region": "Вилоят қўшиш",
+    "add_district": "Туман қўшиш"
   },
   "errors": {
     "something_went_wrong": "Хатолик юз берди!",
@@ -25,5 +32,21 @@
   },
   "app": {
     "name": "Саноат, радиация ва ядро хавфсизлиги қўмитаси экотизими"
-  }
+  },
+  "confirmation": {
+    "are_you_sure_to_delete": "Ўчиришни тасдиқлайсизми?",
+    "delete_description": "Ушбу амални тасдиқлаш орқали маълумот сервердан ўчирилади."
+  },
+  "territories": "Ҳудудлар",
+  "regions": "Вилоятлар",
+  "districts": "Туманлар",
+  "region_code": "Вилоят коди(МХОБТ коди)",
+  "region_name": "Вилоят номи",
+  "district_name": "Туман номи",
+  "district_code": "Туман коди(МХОБТ коди)",
+  "region": "Вилоят",
+  "district": "Туман",
+  "select_region": "Вилоятни танланг",
+  "select_district": "Туманни танланг",
+  "name": "Номи"
 }
