--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -48,5 +48,6 @@
   "district": "Tuman",
   "select_region": "Viloyatni tanlang",
   "select_district": "Tumanni tanlang",
-  "name": "Nomi"
+  "name": "Nomi",
+  "loading": "Yuklanmoqda..."
 }
