feat: integrate APIs to region

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -54,5 +54,7 @@
   "select_region": "Вилоятни танланг",
   "select_district": "Туманни танланг",
   "name": "Номи",
+  "number": "Рақами",
+  "soato": "МХОБТ",
   "loading": "Юкланмоқда..."
 }
