--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -49,5 +49,7 @@
   "select_region": "Viloyatni tanlang",
   "select_district": "Tumanni tanlang",
   "name": "Nomi",
+  "number": "Raqami",
+  "soato": "MHOBT",
   "loading": "Yuklanmoqda..."
 }
