refactor: separate region drawer component

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -56,5 +56,6 @@
   "name": "Номи",
   "number": "Рақами",
   "soato": "МХОБТ",
-  "loading": "Юкланмоқда..."
+  "loading": "Юкланмоқда...",
+  "sequence_number": "Т/р"
 }
