--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -51,5 +51,6 @@
   "name": "Nomi",
   "number": "Raqami",
   "soato": "MHOBT",
-  "loading": "Yuklanmoqda..."
+  "loading": "Yuklanmoqda...",
+  "sequence_number": "T/r"
 }
