fix: fixed pagination next and previous button bugs

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -40,10 +40,10 @@
   "territories": "Hududlar",
   "regions": "Viloyatlar",
   "districts": "Tumanlar",
-  "region_code": "Viloyat kodi(MXOBT kodi)",
+  "region_code": "Viloyat kodi(MHOBT kodi)",
   "region_name": "Viloyat nomi",
   "district_name": "Tuman nomi",
-  "district_code": "Tuman kodi(MXOBT kodi)",
+  "district_code": "Tuman kodi(MHOBT kodi)",
   "region": "Viloyat",
   "district": "Tuman",
   "select_region": "Viloyatni tanlang",
