--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -10,7 +10,9 @@
     "view": "Ko'rsatish",
     "close": "Yopish",
     "add_region": "Viloyat qo'shish",
-    "add_district": "Tuman qo'shish"
+    "add_district": "Tuman qo'shish",
+    "add_central_apparatus": "Markaziy apparat qo'shish",
+    "add_territorial_department": "Hududiy bo'lim qo'shish"
   },
   "errors": {
     "something_went_wrong": "Xatolik yuz berdi!",
@@ -18,6 +20,8 @@
     "page_not_found": "Sahifa topilmadi"
   },
   "menu": {
+    "staffs": "Xodimlar",
+    "departments": "Bo'limlar",
     "territories": "Hududlar",
     "appeals": "Murojaatlar",
     "applications": "Arizalar",
@@ -55,5 +59,7 @@
   "sequence_number": "T/r",
   "previous": "Oldingi",
   "next": "Keyingi",
-  "showing_items": "{{start}} - {{end}} / Umumiy {{total}} ta ma'lumot"
+  "showing_items": "{{start}} - {{end}} / Umumiy {{total}} ta ma'lumot",
+  "central_apparatus": "Markaziy apparat",
+  "territorial_departments": "Hududiy bo'limlar"
 }
