feat: add no data icon to data table and translation multi select section

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -66,5 +66,7 @@
   "next": "Кейинги",
   "showing_items": "{{start}} - {{end}} / Умумий {{total}} та маълумот",
   "central_apparatus": "Марказий аппарат",
-  "territorial_departments": "Худудий бўлимлар"
+  "territorial_departments": "Худудий бўлимлар",
+  "no_data": "Маълумот топилмади",
+  "selected_items_count": "{{count}} та элемент танланди"
 }
