feat: create committee user form

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -48,10 +48,22 @@
     "are_you_sure_to_delete": "Ўчиришни тасдиқлайсизми?",
     "delete_description": "Ушбу амални тасдиқлаш орқали маълумот сервердан ўчирилади."
   },
-  "admin": {
-    "admin_panel": "Маъмур панели",
-    "username": "Логин",
-    "password": "Пароль"
+  "userRoles": {
+    "CHAIRMAN": "Раис",
+    "LEGAL": "Юридик шахс",
+    "MANAGER": "Маъсул ходим",
+    "INSPECTOR": "Назоратчи",
+    "INDIVIDUAL": "Жисмоний шахс",
+    "HEAD": "Маъсул бўлим бошлиғи",
+    "REGIONAL": "Ҳудудий бўлим бошлиғи",
+    "ADMIN": "Администратор"
+  },
+  "direction": {
+    "IRS": "Ионлаштирувчи нурланиш манбалари",
+    "EQUIPMENT": "Қурилма",
+    "HF": "Хавфли ишлаб чиқариш объектлари",
+    "ACCREDITATION": "Аккредитация",
+    "CADASTRE": "Кадастр"
   },
   "regions": "Вилоятлар",
   "districts": "Туманлар",
@@ -82,5 +94,6 @@
   "committee_division_department": "Қўмита бўлими, бошқармаси, департамент",
   "role": "Роли",
   "status": "Статус",
-  "phone": "Телефон"
+  "phone": "Телефон",
+  "directions": "Рухсатлар"
 }
