feat: create view mode action to committee user

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -5,7 +5,7 @@
     "delete": "Ўчириш",
     "deleting": "Ўчирилмоқда...",
     "reload": "Янгилаш",
-    "add": "Қўшиш",
+    "create": "Қўшиш",
     "edit": "Таҳрирлаш",
     "view": "Кўрсатиш",
     "close": "Ёпиш",
@@ -59,11 +59,11 @@
     "ADMIN": "Администратор"
   },
   "direction": {
-    "IRS": "Ионлаштирувчи нурланиш манбалари",
-    "EQUIPMENT": "Қурилма",
-    "HF": "Хавфли ишлаб чиқариш объектлари",
-    "ACCREDITATION": "Аккредитация",
-    "CADASTRE": "Кадастр"
+    "APPEAL": "Аризалар",
+    "ATTESTAT": "Аттестат",
+    "ATTESTATION": "Аттестация",
+    "CERTIFICATE": "Сертификат",
+    "ACCREDITATION": "Аккредитация"
   },
   "regions": "Вилоятлар",
   "districts": "Туманлар",
@@ -95,5 +95,7 @@
   "role": "Роли",
   "status": "Статус",
   "phone": "Телефон",
-  "directions": "Рухсатлар"
+  "directions": "Рухсатлар",
+  "in_work": "Иш фаолиятида",
+  "not_in_work": "Иш фаолиятида эмас"
 }
