refactor: separate user view mode

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -96,6 +96,6 @@
   "status": "Статус",
   "phone": "Телефон",
   "directions": "Рухсатлар",
-  "in_work": "Иш фаолиятида",
-  "not_in_work": "Иш фаолиятида эмас"
+  "active": "Фаол",
+  "inactive": "Фаол эмас"
 }
