--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -96,6 +96,6 @@
   "status": "Status",
   "phone": "Telefon",
   "directions": "Ruxsatlar",
-  "in_work": "Ish faoliyatida",
-  "not_in_work": "Ish faoliyatida emas"
+  "active": "Faol",
+  "inactive": "Faol emas"
 }
