feat: create office user page

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -92,6 +92,7 @@
   "selected_items_count": "{{count}} та элемент танланди",
   "position": "Лавозим",
   "committee_division_department": "Қўмита бўлими, бошқармаси, департамент",
+  "territorial_department_name": "Худудий бўлим номи",
   "role": "Роли",
   "status": "Статус",
   "phone": "Телефон",
