--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -92,6 +92,7 @@
   "selected_items_count": "{{count}} ta element tanlandi",
   "position": "Lavozim",
   "committee_division_department": "Qo'mita bo'limi, boshqarmasi, departament",
+  "territorial_department_name": "Hududiy bo'lim nomi",
   "role": "Roli",
   "status": "Status",
   "phone": "Telefon",
