refactor: change Input number name and refactor district`s field

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -67,17 +67,17 @@
   },
   "regions": "Вилоятлар",
   "districts": "Туманлар",
-  "region_code": "Вилоят коди(МХОБТ коди)",
+  "region_code": "Вилоят коди(МҲОБТ коди)",
   "region_name": "Вилоят номи",
   "district_name": "Туман номи",
-  "district_code": "Туман коди(МХОБТ коди)",
+  "district_code": "Туман коди(МҲОБТ коди)",
   "region": "Вилоят",
   "district": "Туман",
   "select_region": "Вилоятни танланг",
   "select_district": "Туманни танланг",
   "name": "Номи",
   "number": "Рақами",
-  "soato": "МХОБТ",
+  "soato": "МҲОБТ",
   "loading": "Юкланмоқда...",
   "sequence_number": "Т/р",
   "previous": "Олдинги",
@@ -86,13 +86,13 @@
   "central_apparatus": "Марказий аппарат",
   "territorial_departments": "Худудий бўлимлар",
   "committee_staffs": "Қўмита ходимлари",
-  "territorial_staffs": "Худудий бўлим ходимлари",
+  "territorial_staffs": "Ҳудудий бўлим ходимлари",
   "staffs": "Ходимлар",
   "no_data": "Маълумот топилмади",
   "selected_items_count": "{{count}} та элемент танланди",
   "position": "Лавозим",
   "committee_division_department": "Қўмита бўлими, бошқармаси, департамент",
-  "territorial_department_name": "Худудий бўлим номи",
+  "territorial_department_name": "Ҳудудий бўлим номи",
   "role": "Роли",
   "status": "Статус",
   "phone": "Телефон",
