refactor: change some page

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -60,7 +60,7 @@
     "REGIONAL": "Ҳудудий бўлим бошлиғи",
     "ADMIN": "Администратор"
   },
-  "direction": {
+  "permission": {
     "APPEAL": "Аризалар",
     "ATTESTAT": "Аттестат",
     "ATTESTATION": "Аттестация",
