--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -60,7 +60,7 @@
     "REGIONAL": "Hududiy bo'lim boshlig'i",
     "ADMIN": "Administrator"
   },
-  "direction": {
+  "permission": {
     "APPEAL": "Arizalar",
     "ATTESTAT": "Attestat",
     "ATTESTATION": "Attestatsiya",
