--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -75,6 +75,15 @@
     "COAL": "Кўмир",
     "GEOLOGY": "Геология"
   },
+  "application_status": {
+    "ALL": "Барчаси",
+    "NEW": "Янги",
+    "IN_PROCESS": "Ижрода",
+    "IN_AGREEMENT": "Келишишда",
+    "IN_APPROVAL": "Тасдиқлашда",
+    "COMPLETED": "Якунланган",
+    "REJECTED": "Қайтарилган"
+  },
   "regions": "Вилоятлар",
   "districts": "Туманлар",
   "region_code": "Вилоят коди(МҲОБТ коди)",
