feat: create template pages and features

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -37,7 +37,8 @@
     "state_reception": "Davlat qabuli",
     "monitoring": "Monitoring",
     "reports": "Hisobotlar",
-    "hazardous_facilities": "XICHOlar"
+    "hazardous_facilities": "XICHOlar",
+    "templates": "Shablonlar"
   },
   "app": {
     "name": "Sanoat, radiatsiya va yadro xavfsizligi qo‘mitasi ekotizimi"
