--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -38,7 +38,8 @@
     "monitoring": "Monitoring",
     "reports": "Hisobotlar",
     "hazardous_facilities": "XICHOlar",
-    "templates": "Shablonlar"
+    "templates": "Shablonlar",
+    "sub_types": "Quyi turlar"
   },
   "app": {
     "name": "Sanoat, radiatsiya va yadro xavfsizligi qo‘mitasi ekotizimi"
