fix: fixed department and staff page

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -56,7 +56,7 @@
     "CHAIRMAN": "Rais",
     "LEGAL": "Yuridik shaxs",
     "MANAGER": "Ma'sul xodim",
-    "INSPECTOR": "Nazoratchi",
+    "INSPECTOR": "Inspektor",
     "INDIVIDUAL": "Jismoniy shaxs",
     "HEAD": "Ma'sul bo'lim boshlig'i",
     "REGIONAL": "Hududiy bo'lim boshlig'i",
