feat: add sidebar menu to regional user

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -39,7 +39,8 @@
     "reports": "Ҳисоботлар",
     "hazardous_facilities": "ҲИЧОлар",
     "templates": "Шаблонлар",
-    "sub_types": "Қуйи турлар"
+    "sub_types": "Қуйи турлар",
+    "permits_authorization_documents": "Рухсат этувчи хужжатлар"
   },
   "app": {
     "name": "Саноат, радиация ва ядро хавфсизлиги қўмитаси экотизими"
