fix: crane and lift form

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -2,29 +2,29 @@
   "actions": {
     "save": "Saqlash",
     "cancel": "Bekor qilish",
-    "delete": "O'chirish",
-    "deleting": "O'chirilmoqda...",
+    "delete": "Oʻchirish",
+    "deleting": "Oʻchirilmoqda...",
     "reload": "Yangilash",
-    "create": "Qo'shish",
+    "create": "Qoʻshish",
     "edit": "Tahrirlash",
-    "view": "Ko'rsatish",
+    "view": "Koʻrsatish",
     "close": "Yopish",
-    "add_region": "Viloyat qo'shish",
-    "add_district": "Tuman qo'shish",
-    "add_central_apparatus": "Markaziy apparat qo'shish",
-    "add_territorial_department": "Hududiy bo'lim qo'shish",
-    "add_territorial_staff": "Hududiy xodim qo'shish",
-    "add_committee_staff": "Qo'mita xodimi qo'shish",
-    "add_hazardous_facility_type": "XICHO turi qo'shish"
+    "add_region": "Viloyat qoʻshish",
+    "add_district": "Tuman qoʻshish",
+    "add_central_apparatus": "Markaziy apparat qoʻshish",
+    "add_territorial_department": "Hududiy boʻlim qoʻshish",
+    "add_territorial_staff": "Hududiy xodim qoʻshish",
+    "add_committee_staff": "Qoʻmita xodimi qoʻshish",
+    "add_hazardous_facility_type": "XICHO turi qoʻshish"
   },
   "errors": {
     "something_went_wrong": "Xatolik yuz berdi!",
-    "view_details": "Ma'lumotlarni ko'rsatish",
+    "view_details": "Maʼlumotlarni koʻrsatish",
     "page_not_found": "Sahifa topilmadi"
   },
   "menu": {
     "staffs": "Xodimlar",
-    "departments": "Bo'limlar",
+    "departments": "Boʻlimlar",
     "territories": "Hududlar",
     "appeals": "Murojaatlar",
     "applications": "Arizalar",
@@ -50,17 +50,17 @@
     "pin": "JSHSHIR"
   },
   "confirmation": {
-    "are_you_sure_to_delete": "O'chirishni tasdiqlaysizmi?",
-    "delete_description": "Ushbu amalni tasdiqlash orqali ma'lumot serverdan o'chiriladi."
+    "are_you_sure_to_delete": "Oʻchirishni tasdiqlaysizmi?",
+    "delete_description": "Ushbu amalni tasdiqlash orqali maʼlumot serverdan oʻchiriladi."
   },
   "userRoles": {
     "CHAIRMAN": "Rais",
     "LEGAL": "Yuridik shaxs",
-    "MANAGER": "Ma'sul xodim",
+    "MANAGER": "Maʼsul xodim",
     "INSPECTOR": "Inspektor",
     "INDIVIDUAL": "Jismoniy shaxs",
-    "HEAD": "Ma'sul bo'lim boshlig'i",
-    "REGIONAL": "Hududiy bo'lim boshlig'i",
+    "HEAD": "Maʼsul boʻlim boshligʻi",
+    "REGIONAL": "Hududiy boʻlim boshligʻi",
     "ADMIN": "Administrator"
   },
   "permission": {
@@ -75,7 +75,7 @@
     "GAS": "Gaz",
     "BOILER": "Qozon",
     "CHEMISTRY": "Kimyo",
-    "COAL": "Ko'mir",
+    "COAL": "Koʻmir",
     "GEOLOGY": "Geologiya"
   },
   "templates": {
@@ -89,8 +89,8 @@
     "BOILER": "Qozon",
     "ELEVATOR": "Lift",
     "ESCALATOR": "Eskalator",
-    "CABLEWAY": "Osma yo'l",
-    "HOIST": "Ko'tarma qurilma",
+    "CABLEWAY": "Osma yoʻl",
+    "HOIST": "Koʻtarma qurilma",
     "PIPELINE": "Quvur",
     "CHEMICAL_CONTAINER": "Kimyoviy idish",
     "HEAT_PIPELINE": "Issiqlik quvuri",
@@ -106,6 +106,14 @@
     "IN_APPROVAL": "Tasdiqlashda",
     "COMPLETED": "Yakunlangan",
     "REJECTED": "Qaytarilgan"
+  },
+  "building_sphere_type": {
+    "RESIDENTIAL": "Turar joy binosi",
+    "HOTEL": "Mehmonxona",
+    "SOCIAL": "Ijtimoiy soha",
+    "INDUSTRIAL": "Sanoat korxonasi",
+    "SERVICE": "Xizmat ko‘rsatish objekti",
+    "OTHER": "Boshqa objektlar"
   },
   "regions": "Viloyatlar",
   "districts": "Tumanlar",
@@ -124,17 +132,17 @@
   "sequence_number": "T/r",
   "previous": "Oldingi",
   "next": "Keyingi",
-  "showing_items": "{{start}} - {{end}} / Umumiy {{total}} ta ma'lumot",
+  "showing_items": "{{start}} - {{end}} / Umumiy {{total}} ta maʼlumot",
   "central_apparatus": "Markaziy apparat",
-  "territorial_departments": "Hududiy bo'limlar",
-  "committee_staffs": "Qo'mita xodimlari",
-  "territorial_staffs": "Hududiy bo'lim xodimlari",
+  "territorial_departments": "Hududiy boʻlimlar",
+  "committee_staffs": "Qoʻmita xodimlari",
+  "territorial_staffs": "Hududiy boʻlim xodimlari",
   "staffs": "Xodimlar",
-  "no_data": "Ma'lumot mavjud emas",
+  "no_data": "Maʼlumot mavjud emas",
   "selected_items_count": "{{count}} ta element tanlandi",
   "position": "Lavozim",
-  "committee_division_department": "Qo'mita bo'limi, boshqarmasi, departament",
-  "territorial_department_name": "Hududiy bo'lim nomi",
+  "committee_division_department": "Qoʻmita boʻlimi, boshqarmasi, departament",
+  "territorial_department_name": "Hududiy boʻlim nomi",
   "role": "Roli",
   "status": "Status",
   "phone": "Telefon",
