--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -29,7 +29,7 @@
     "appeals": "Murojaatlar",
     "applications": "Arizalar",
     "accreditation": "Akkreditatsiya",
-    "register": "Reestrlar",
+    "register": "Reyestrlar",
     "risk_analysis": "Xavf tahlili",
     "cadastre": "Kadastr",
     "prophylactic": "Profilaktika",
@@ -65,6 +65,7 @@
   },
   "permission": {
     "APPEAL": "Arizalar",
+    "REGISTRY": "Reyestrlar",
     "ATTESTAT": "Attestat",
     "ATTESTATION": "Attestatsiya",
     "CERTIFICATE": "Sertifikat",
